--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,14 +1,14 @@
 --- 
-title: "RNA-seq Workflow"
+title: "Occupation By State"
 author:
-  - Daniela Cassol
+  - Luiz H Monticelli
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
-bibliography: [pipeline.bib, book.bib, bibtex.bib]
+bibliography: [pipeline.bib, book.bib]
 biblio-style: apalike
 link-citations: yes
-description: "This is a RNA-seq template workflow."
+description: "Add a description"
 ---
 
 # Welcome {-}
@@ -16,55 +16,17 @@ description: "This is a RNA-seq template workflow."
 ## About {.unnumbered}
 
 ```{r, fig.align='center', echo=FALSE, out.height="200px"}
-knitr::include_graphics("https://user-images.githubusercontent.com/22381693/69014860-a7299300-09e2-11ea-9d1a-1840d0d609d7.png")
+knitr::include_graphics("https://miro.medium.com/v2/resize:fit:800/1*obiA8N2In6OYcQWpVefB5A.jpeg")
 ```
 
-This repository containers RNA-seq pipeline, docker container and sample data for testing.
-Pipelines are written in [WDL language](https://github.com/openwdl/wdl) and [Cromwell](https://cromwell.readthedocs.io/en/stable/) workflow execution engine is used to run them.
+Add the project description
 
-## Is this workflow useful for you? {.unnumbered}
+## What to expect? {.unnumbered}
 
 **Expected output**
 
-- `Fastqc` Quality Report 
-- Reads Trimming with `Trimmomatic`
-- Align Reads to Reference Genome using `HISAT2` (BAM files)
-- Expression quantification using `summarizeOverlaps (GenomicFeatures)` [@Lawrence2013-kt]
-- Differential Expression Matrix using `DESeq2`
-- Create Feature set and Filtered Differential Expression Matrix
+- add short description of each chapter of the research
 
-## Quick Start - No Installation required {.unnumbered}
-
-```{bash, eval=FALSE}
-docker run  -dP dcassol/wdl_rnaseq
-docker ps 
-docker exec -it <IMAGE NAME> /bin/bash
-cromwell run rnaseq.wdl -i rnaseq.json -o rnaseq.options.json 
-```
-
-Now, you can test and edit the pipeline for your data. For more details, please 
-check the `Sample Data` section. Have fun!
-
-## Quick Start {.unnumbered}
-
-**Step 1**: Clone the git repository to a directory on your computer:
-
-```{bash, eval=FALSE}
-https://github.com/dcassol/wdl_rnaseq.git
-```
-
-Note: Ensure you have the correct permissions to run the pipeline - here we are using `Docker`. 
-A further section will be provided containing more details if you are running in an HPC environment. 
-
-**Step 2**: To run the pipeline use the command below:
-
-```{bash, eval=FALSE}
-cromwell run rnaseq.wdl -i rnaseq.json -o rnaseq.options.json 
-## OR
-java -jar cromwell-72.jar run rnaseq.wdl -i rnaseq.json -o rnaseq.options.json
-```
-
-Please, make sure use the correct PATH to `cromwell-72.jar` file.
 
 ```{r include=FALSE}
 # automatically create a bib database for R packages
