--- a/docs/pipeline.bib
+++ b/docs/pipeline.bib
@@ -55,6 +55,14 @@
   url = {https://yihui.org/knitr/},
 }
 
+@Manual{R-maps,
+  title = {maps: Draw Geographical Maps},
+  author = {Ray Brownrigg},
+  year = {2023},
+  note = {R package version 3.4.2},
+  url = {https://CRAN.R-project.org/package=maps},
+}
+
 @Manual{R-plotly,
   title = {plotly: Create Interactive Web Graphics via plotly.js},
   author = {Carson Sievert and Chris Parmer and Toby Hocking and Scott Chamberlain and Karthik Ram and Marianne Corvellec and Pedro Despouy},
